Esqueleto de la aplicacion listo

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:layout_margin="@dimen/margin_menu"
-    tools:context=".MainActivity" >
+    tools:context=".views.MainActivity" >
 
     <TextView
         android:layout_width="match_parent"
@@ -26,12 +26,14 @@
                 android:id="@+id/btn_start"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
+                android:onClick="launchGame"
                 android:text="@string/start"/>
 
             <Button
                 android:id="@+id/btn_config"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
+                android:onClick="launchPreferences"
                 android:text="@string/config"/>
         </TableRow>
 
@@ -46,7 +48,8 @@
                 android:id="@+id/btn_exit"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
-                android:text="@string/exit"/>
+                android:onClick="launchLastScores"
+                android:text="@string/lastScores"/>
         </TableRow>
     </TableLayout>
 
