--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:orientation="vertical"
     android:gravity="center"
     android:layout_margin="30dp"
-    tools:context=".views.MainActivity" >
+    tools:context=".views.MainActivity">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/main_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/main_title"
+        android:layout_marginBottom="20dp"
         android:gravity="center"
-        android:textSize="25sp"
-        android:layout_marginBottom="20dp"/>
+        android:text="@string/main_title"
+        android:textSize="45sp"
+        android:textColor="@android:color/white"
+        android:typeface="monospace"/>
 
     <Button
         android:id="@+id/btn_start"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:onClick="showPreferences"
-        android:text="@string/start"/>
+        android:onClick="launchGame"
+        android:text="@string/start"
+        android:typeface="monospace"/>
 
     <Button
         android:id="@+id/btn_config"
