--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -9,6 +9,7 @@
         android:id="@+id/gameView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:focusable="true"/>
+        android:focusable="true"
+        android:background="@drawable/fondo"/>
 
 </LinearLayout>
