--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,12 +3,14 @@
     <string-array name="tiposGraficos">
         <item>vectorial</item>
         <item>bitmap</item>
+        <item>vectorDrawable</item>
         <item>3D</item>
     </string-array>
     <string-array name="tiposGraficosValores">
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 
 
