--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,14 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="SettingsTheme" parent="Theme.AppCompat">
+    <style name="AppTheme.Fullscreen" >
+        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="AppTheme.SettingsTheme">
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
     </style>
 
