--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -26,8 +26,10 @@
     <item
         android:id="@+id/menu_search"
         android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/menu_search"
         android:orderInCategory="115"
-        android:title="@string/Search"
-        app:showAsAction="always|collapseActionView" />
+        android:actionViewClass="android.widget.SearchView"
+        app:showAsAction="always|collapseActionView"
+        />
 
 </menu>
