Unidad 6 lista y algunos extras

--- a/app/src/main/res/xml/app_preferences.xml
+++ b/app/src/main/res/xml/app_preferences.xml
@@ -16,12 +16,12 @@
         android:key="graphicType"
         android:summary="@string/graphic_type_summary"
         android:title="@string/graphic_type_title" />
-    <EditTextPreference
+    <!--<EditTextPreference
         android:defaultValue="3"
         android:inputType="number"
         android:key="fragments"
         android:summary="@string/asteroids_fragments_summary"
-        android:title="@string/asteroids_fragments_title" />
+        android:title="@string/asteroids_fragments_title" />-->
     <MultiSelectListPreference
         android:defaultValue="@array/inputTypesValues"
         android:key="validInputs"
@@ -29,6 +29,8 @@
         android:entryValues="@array/inputTypesValues"
         android:summary="Selecciona los inputs validos para el juego"
         android:title="Inputs"/>
+
+    <!--
     <PreferenceCategory
         android:title="@string/multiplayer_section_title">
         <CheckBoxPreference
@@ -50,6 +52,7 @@
             android:title="@string/connexion_type_title" />
 
     </PreferenceCategory>
+    -->
 </PreferenceScreen>
 
 
