--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,57 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:layout_margin="@dimen/margin_menu"
-    tools:context=".views.MainActivity" >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:id="@+id/main_title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/main_title"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:gravity="center"
-        android:textSize="25sp"
-        android:layout_marginBottom="20dp"/>
+        android:layout_margin="@dimen/margin_menu"
+        tools:context=".views.MainActivity" >
 
-    <TableLayout
-        android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/main_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/main_title"
+            android:gravity="center"
+            android:textSize="25sp"
+            android:layout_marginBottom="8dp"/>
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:stretchColumns="*">
+            <TableRow>
+                <Button
+                    android:id="@+id/btn_start"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:onClick="launchGame"
+                    android:text="@string/start"/>
+
+                <Button
+                    android:id="@+id/btn_config"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:onClick="launchPreferences"
+                    android:text="@string/config"/>
+            </TableRow>
+
+            <TableRow>
+                <Button
+                    android:id="@+id/btn_about"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:text="@string/about"/>
+
+                <Button
+                    android:id="@+id/btn_exit"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:onClick="launchLastScores"
+                    android:text="@string/lastScores"/>
+            </TableRow>
+
+            <TableRow>
+                <Button
+                    android:layout_span="2"
+                    android:id="@+id/btn_converter"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:text="@string/converter"/>
+
+            </TableRow>
+        </TableLayout>
+
+    </LinearLayout>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/scoreView"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
-        android:stretchColumns="*">
-        <TableRow>
-            <Button
-                android:id="@+id/btn_start"
-                android:layout_height="wrap_content"
+        android:visibility="gone"
+
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="8dp">
+
+            <TextView
                 android:layout_width="match_parent"
-                android:onClick="launchGame"
-                android:text="@string/start"/>
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/txt_won"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+
+            <TextView
+                android:id="@+id/wonMessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="16dp"
+                android:text="@string/txt_score"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+            <EditText
+                android:id="@+id/userNickname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:hint="@string/lbl_nickname"
+                android:padding="16dp" />
 
             <Button
-                android:id="@+id/btn_config"
+                android:id="@+id/wonAccept"
+                style="@style/Widget.AppCompat.Button.Borderless.Colored"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:onClick="launchPreferences"
-                android:text="@string/config"/>
-        </TableRow>
-
-        <TableRow>
-            <Button
-                android:id="@+id/btn_about"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:text="@string/about"/>
-
-            <Button
-                android:id="@+id/btn_exit"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:onClick="launchLastScores"
-                android:text="@string/lastScores"/>
-        </TableRow>
-    </TableLayout>
-
-</LinearLayout>
+                android:layout_gravity="right"
+                android:text="@string/btn_accept" />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</android.support.constraint.ConstraintLayout>
