--- a/app/src/main/res/layout/score_item.xml
+++ b/app/src/main/res/layout/score_item.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight">
 
-    <ImageView
+    <com.android.volley.toolbox.NetworkImageView
         android:id="@+id/icon"
         android:layout_width="0dp"
         android:layout_height="0dp"
